@@ -1,44 +1,46 @@
 	Preparing a libgeotiff Release
 	==============================
 
- 1) Update the VERSION_MAJOR/MINOR/POINT information in configure.ac, and 
+ 1) Update the VERSION_MAJOR/MINOR/POINT information in configure.ac, and
     run autogen.sh
 
  2) Update the LIBGEOTIFF_VERSION macro in geotiff.h.
 
  3) Update -version-info CURRENT/REVISION/AGE values in Makefile.am
-   - For a release with no interface changes just bump REVISION. 
-   - Adding interfaces, bump CURRENT/AGE, set REVISION to 0. 
+   - For a release with no interface changes just bump REVISION.
+   - Adding interfaces, bump CURRENT/AGE, set REVISION to 0.
    - Deleting interfaces / compatibility issues - bump CURRENT, others to zero.
 
- 4) Add a note to the ChangeLog that a new release is being issued, and what
+ 4) Update GeoTIFF_VERSION and SO_VERSION in CMakeLists.txt
+
+ 5) Add a note to the ChangeLog that a new release is being issued, and what
     the release number is.
 
- 5) Commit the above changes.
+ 6) Commit the above changes.
 
- 6) Tag the release set in SVN (for now we aren't using branches in libgeotiff)
+ 7) Tag the release set in SVN (for now we aren't using branches in libgeotiff)
 
     svn copy https://svn.osgeo.org/metacrs/geotiff/trunk/libgeotiff \
              https://svn.osgeo.org/metacrs/geotiff/tags/libgeotiff-1.4.0
 
- 7) Prepare a zip and tar.gz file using a command like:
+ 8) Prepare a zip and tar.gz file using a command like:
 
     make dist
 
- 8) Test build and install on at least one Unix platform.  Test build on a
+ 9) Test build and install on at least one Unix platform.  Test build on a
     Windows system.
 
- 9) The resulting files (eg. libgeotiff-1.1.5.tar.gz and libgeotiff-1.1.5.zip) 
-    should be copied to the distribution directory (geotiff/libgeotiff on 
-    upload.osgeo.org).  Update the README file in that directory to 
-    indicate the new current release.
+ 10) The resulting files (eg. libgeotiff-1.1.5.tar.gz and libgeotiff-1.1.5.zip)
+     should be copied to the distribution directory (geotiff/libgeotiff on
+     upload.osgeo.org).  Update the README file in that directory to
+     indicate the new current release.
 
     scp libgeotiff-1.1.5.{tar.gz,zip} warmerdam@upload.osgeo.org:/osgeo/download/geotiff/libgeotiff
 
-10) Announce on GeoTIFF mailing list: geotiff@lists.maptools.org
-    Include a summary of the ChangeLog items for the most recent release.
+ 11) Announce on GeoTIFF mailing list: geotiff@lists.maptools.org
+     Include a summary of the ChangeLog items for the most recent release.
 
-11) Update entry at http://www.freshmeat.net/projects/libgeotiff
+ 12) Update entry at http://www.freshmeat.net/projects/libgeotiff
 
-12) Update http://geotiff.osgeo.org/ trac wiki page to point to most recent 
-    release, including the most recent release version number.
+ 13) Update http://geotiff.osgeo.org/ trac wiki page to point to most recent
+     release, including the most recent release version number.
